[package]
name = "mini-redis-zh"
version = "0.1.0"
edition = "2021"
description = """
An incomplete implementation of a Rust client and server. Used as a
larger example of an idiomatic Tokio application.
"""

[[bin]]
name = "mini-redis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "mini-redis-server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.3.0"
atoi = "2.0.0"
bytes = "1"
clap = { version = "4.2.7", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
# 实现 OTel 规范中定义的类型
opentelemetry = { version = "0.20.0", optional = true }
# 跟踪箱和 opentelemetry 箱之间的集成
tracing-opentelemetry = { version = "0.21.0", optional = true }
# 提供“传播器”来跨服务传递 XrayId
opentelemetry-aws = { version = "0.8.0", optional = true }
# 允许将数据发送到 OTel 收集器
opentelemetry-otlp = { version = "0.13.0", optional = true }

[dev-dependencies]
# 仅在开发模式下启用测试实用程序。这主要是为了测试。
tokio = { version = "1", features = ["test-util"] }

[features]
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry", "dep:opentelemetry-aws", "dep:opentelemetry-otlp"]